<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.organization.OrganizationFragment">

    <TextView
        android:id="@+id/titleTextViewUpdateOrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_org"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/id_UpdateOkBtnOrg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextNameUpdateOrg"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="@+id/editTextNameUpdateOrg"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewUpdateOrg" />

    <EditText
        android:id="@+id/editTextNameUpdateOrg"
        android:layout_width="379dp"
        android:layout_height="79dp"
        android:layout_margin="16dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        android:hint="Enter name"/>

    <TextView
        android:id="@+id/nameTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescriptionCreateOrg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextDescriptionCreateOrg"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameUpdateOrg" />

    <EditText
        android:id="@+id/editTextDescriptionCreateOrg"
        android:layout_width="376dp"
        android:layout_height="278dp"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingBottom="200dp"
        android:background="@drawable/custom_edittext"
        app:layout_constraintBottom_toTopOf="@+id/id_UpdateOkBtnOrg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView2"
        app:layout_constraintVertical_bias="0.0"
        android:hint="Enter description"/>

    <Button
        android:id="@+id/id_UpdateOkBtnOrg"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/purple"
        android:text="@string/btn_create"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>