<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectFinal.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_createOrgFragment"
            app:destination="@id/createOrgFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_organization"
            app:destination="@id/nav_organization" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.projectFinal.activities.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.projectFinal.activities.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.projectFinal.activities.ui.notification.NotificationFragment"
        android:label="Notification"
        tools:layout="@layout/fragment_notification" />
<!--    <fragment-->
<!--        android:id="@+id/nav_administration"-->
<!--        android:name="com.example.projectFinal.activities.ui.administration.AdministrationFragment"-->
<!--        android:label="Administration"-->
<!--        tools:layout="@layout/item_user" />-->
    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.projectFinal.activities.ui.users.UsersFragment"
        android:label="Users"
        tools:layout="@layout/fragment_users" >
        <action
            android:id="@+id/action_nav_users_to_fragment_edit_customer3"
            app:destination="@id/fragment_edit_customer3" />
    </fragment>
    <fragment
        android:id="@+id/nav_organization"
        android:name="com.example.projectFinal.activities.ui.organization.OrganizationFragment"
        android:label="Organization"
        tools:layout="@layout/fragment_list_org" >
        <action
            android:id="@+id/action_nav_organization_to_createOrgFragment"
            app:destination="@id/createOrgFragment" />
        <action
            android:id="@+id/action_nav_organization_to_updateFragment"
            app:destination="@id/updateFragment" />
        <action
            android:id="@+id/action_nav_organization_to_switchOwnerMemberFragment"
            app:destination="@id/switchOwnerMemberFragment" />
        <action
            android:id="@+id/action_nav_organization_to_organizationListUsersFragment2"
            app:destination="@id/organizationListUsersFragment2" />
    </fragment>
    <fragment
        android:id="@+id/createOrgFragment"
        android:name="com.example.projectFinal.activities.ui.organization.CreateOrgFragment"
        android:label="fragment_create_org"
        tools:layout="@layout/fragment_create_org" />
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.projectFinal.activities.ui.organization.UpdateFragment"
        android:label="UpdateFragment" >
        <argument
            android:name="idOrg"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/switchOwnerMemberFragment"
        android:name="com.example.projectFinal.activities.ui.organization.SwitchOwnerMemberFragment"
        android:label="Asignar usuarios/roles"
        tools:layout="@layout/fragment_switch_list" >
        <argument
            android:name="idOrg"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/organizationListUsersFragment2"
        android:name="com.example.projectFinal.activities.ui.organization.OrganizationListUsersFragment"
        android:label="List user ORG"
        tools:layout="@layout/fragment_organization_list_users" >
        <argument
            android:name="idOrg"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/fragment_edit_customer3"
        android:name="com.example.projectFinal.activities.ui.users.Fragment_edit_user"
        android:label="Edit user"
        tools:layout="@layout/fragment_edit_user" >
        <argument
            android:name="idUser"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>